--- a/gb/20/1/19/n11803833.md
+++ b/gb/20/1/19/n11803833.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/aiaxj298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aiaxj298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eyk232/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eyk232/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eyk232/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>家扶感恩餐会  志工传爱不落人后</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/a2821c67487ce914ee97f4c684b4dfa1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/a2821c67487ce914ee97f4c684b4dfa1-600x400.jpg" />
 <h6>桃园家扶中心扶幼委员会陈郑权主委与家扶志工合影。（徐乃义／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月19日讯】（大纪元记者徐乃义<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md">桃园</a>报导）担任桃园<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E5%AE%B6%E6%89%B6%E4%B8%AD%E5%BF%83.md">家扶中心</a>家扶之友会<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md">志工</a>吴连港及余宝珍服务超过30载，服务工作不落人后，获桃园家扶中心“109年桃园家扶中心志工授证表扬暨<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E9%A4%90%E4%BC%9A.md">感恩餐会</a>”，总共表扬27名资深志工、4名卸任志工队队长；当天共计200名志工伙伴出席。</p>
-<figure id="11803837" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2020/01/8b24fc0b456e8be9a37676a86f5bcca4-450x499.jpg" alt="桃园家扶中心表扬家扶之友会服务满35年志工余宝珍。" width="500" /><figcaption class="wp-caption-text"><a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md">桃园</a><a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E5%AE%B6%E6%89%B6%E4%B8%AD%E5%BF%83.md">家扶中心</a>表扬家扶之友会服务满35年<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md">志工</a>余宝珍。（徐乃义／大纪元）</figcaption></figure>
+<p>【大纪元2020年01月19日讯】（大纪元记者徐乃义<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）担任桃园<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%AE%B6%E6%89%B6%E4%B8%AD%E5%BF%83.md#1">家扶中心</a>家扶之友会<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md#1">志工</a>吴连港及余宝珍服务超过30载，服务工作不落人后，获桃园家扶中心“109年桃园家扶中心志工授证表扬暨<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E9%A4%90%E4%BC%9A.md#1">感恩餐会</a>”，总共表扬27名资深志工、4名卸任志工队队长；当天共计200名志工伙伴出席。</p>
+<figure id="11803837" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/8b24fc0b456e8be9a37676a86f5bcca4-450x499.jpg" alt="桃园家扶中心表扬家扶之友会服务满35年志工余宝珍。" width="500" /><figcaption class="wp-caption-text"><ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a><ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%AE%B6%E6%89%B6%E4%B8%AD%E5%BF%83.md#1">家扶中心</a>表扬家扶之友会服务满35年<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md#1">志工</a>余宝珍。（徐乃义／大纪元）</figcaption></figure>
 <p>人称港伯的吴连港从事汽车修理厂工作，后来透过堂弟介绍加入桃园家扶中心家扶之友会，结下永久的缘分；吴连港加入家扶之友会后很喜欢跟伙伴一起办理活动，志工伙伴有钱的出钱，有力的出力，大家热热闹闹地办活动，感情深厚，非常有趣!</p>
-<figure id="11803836" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2020/01/fdfba10b5695d8dc98d6072c27c0fe8f-450x254.jpg" alt="桃园家扶中心扶幼委员会陈郑权主委与10年资深志工合影。" width="500" /><figcaption class="wp-caption-text">桃园家扶中心扶幼委员会陈郑权主委与10年资深志工合影。（徐乃义／大纪元）</figcaption></figure>
+<figure id="11803836" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/fdfba10b5695d8dc98d6072c27c0fe8f-450x254.jpg" alt="桃园家扶中心扶幼委员会陈郑权主委与10年资深志工合影。" width="500" /><figcaption class="wp-caption-text">桃园家扶中心扶幼委员会陈郑权主委与10年资深志工合影。（徐乃义／大纪元）</figcaption></figure>
 <p>一晃眼，吴连港加入家扶之友会已30载，每个月中心发放扶助金时，都可以看到他在路口协助交管，亲切的和扶助家庭问候并且协助物资的搬运。吴连港对于服务非常重视，往往在活动前2个小时就可以看到他的身影出现在桃园家扶中心，志工队后辈伙伴都很敬佩吴连港先生的认真及投入。</p>
 <p>未来吴连港会持续付出及协助各项工作，并期许有更多家扶自立青年可以加入家扶之友会，使各项服务能够接轨不断层。</p>
 <p>余宝珍民国73年透过当时是家扶之友会志工的同学介绍，因而加入家扶之友会，且一投入就是35年。</p>
@@ -22,40 +22,44 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/19/n11803833.htm">家扶感恩餐会  志工传爱不落人后</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/10/26/n11613590.htm">“筑梦筑馆”员林家扶儿终于有完善的“家”了</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/31/n11490095.htm">家扶受助大专生领取助学金 开心踏上求学路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/25/n11476325.htm">走过50年 台东家扶陪伴逾万名儿童自立</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11457487.htm">三个总统教育奖   关心助学金尚有百万缺口</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/1/n11423154.htm">饼干DIY 彰化家扶课辅班实习家庭生活</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/30/n11418352.htm">生命烛光点亮自己照亮别人  谢双璟获奉献奖</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776367.htm">“贤”的简化汉字 暗藏什么可怕后果？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788003.htm">逆天而为痛悔迟72：1966──金顺守女逆守牛，江青文革妖言骤（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798622.htm">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803234.htm">【热点互动】美中贸易停火期能维持多久?</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11802063.htm">【拍案惊奇】救吴花燕钱无踪 港警贴连侬被捕</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801219.htm">大陆多座城市医院启动一级防护 传医护中招</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801004.htm">习议“领导更替” 美媒：北京陷接班人怪圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11799146.htm">中共签署屈辱条例？网络民间热议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800385.htm">美国白狗生了8只小狗 有一只竟是绿色的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799718.htm">大陆男子用牙膏画人像 关灯后令人惊叹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801405.htm">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798667.htm">《好莱坞往事》大陆撤档 导演昆汀首次回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798856.htm">咳嗽不停众星躲避 陈家乐声明：不是武汉肺炎</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798454.htm">【胡乃文开讲】喝一碗汤防掉发？中医3方法避免秃顶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800385.htm">美国白狗生了8只小狗 有一只竟是绿色的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799718.htm">大陆男子用牙膏画人像 关灯后令人惊叹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796042.htm">别让牙齿走不归路 牙龈发炎8大原因一定要知道</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11797735.htm">澳洲喜鹊竟唱出消防警笛声 背后见证野火灾难</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/7/30/n11418352.md#1">生命烛光点亮自己照亮别人  谢双璟获奉献奖</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/8/1/n11423154.md#1">饼干DIY 彰化家扶课辅班实习家庭生活</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/8/16/n11457487.md#1">三个总统教育奖   关心助学金尚有百万缺口</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/8/25/n11476325.md#1">走过50年 台东家扶陪伴逾万名儿童自立</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/8/31/n11490095.md#1">家扶受助大专生领取助学金 开心踏上求学路</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/10/26/n11613590.md#1">“筑梦筑馆”员林家扶儿终于有完善的“家”了</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081725.md#1">蔡英文访飨宾餐旅集团    挺企业、企业挺员工</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081513.md#1">憨儿手作玫瑰花让医护人员心花怒放</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081459.md#1">“Immortal花艺坊”色彩缤纷干燥花传递爱的温度</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081327.md#1">报税防疫便民   北区国税局桃园分局贴心示范</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080214.md#1">蓬佩奥：大量证据将病毒和武汉实验室相联</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077776.md#1">遭央视连骂三天 蓬佩奥反在中国人气飙升</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080130.md#1">遭央视谩骂的第二个美国人 班农说了啥？</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080335.md#1">孙俪发文为女儿庆生 6岁小花又被亲到脸变形</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079058.md#1">蔡阿嘎二宝满月 喜收蔡总统暖心贺礼</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/24/n12059149.md#1">星孛与人事遥相呼应 并非浪得虚名</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/12/n12024956.md#1">【馨香雅句】诗词中的女孩名</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/30/n12071494.md#1">飘洋过海 移民艰辛路──我家族的故事（一）</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eyk232/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eyk232/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/19/n11803833.htm">家扶感恩餐会  志工传爱不落人后</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/20/1/19/n11803833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
