--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,22 +13,21 @@
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082400.md#1" title="北京若不加购美商品 川普：终止贸易协议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ1BM-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080175.md#1" title="疫情“隔离”下 美国人如何给我女儿过生日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/IMG_2614-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eyk232.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1">【最新疫情5·5】多国捐80亿对抗疫情</a><br>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083156.md#1">和黑石谈判陷入停滞？SOHO中国股价跌超25%</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083426.md#1">【翻墙必看】党员成中共病毒“靶点”</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083262.md#1">川普国安顾问以中文演讲 谈中国“五四”精神</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083331.md#1">印度企业家送家人搭专机赴台 因台湾最安全</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1">【最新疫情5·5】多国捐80亿对抗疫情</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083156.md#1">和黑石谈判陷入停滞？SOHO中国股价跌超25%</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083426.md#1">【翻墙必看】党员成中共病毒“靶点”</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083262.md#1">川普国安顾问以中文演讲 谈中国“五四”精神</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083331.md#1">印度企业家送家人搭专机赴台 因台湾最安全</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080048.md#1">网传邓朴方公开信 红二代：代表部分人心声</a><br>
-<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076680.md#1">中共瞒疫被追责 专家与外交官不同调的背后</a><br>
-<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078978.md#1">瘟疫冲击出口 中国经济“无复苏迹象”</a><br>
-<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077164.md#1">华商经阿里巴巴购货遇黑心土豆?损失难获赔</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12074400.md#1">“本福德定律”验证中共疫情数据造假</a><br>
+<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077164.md#1">华商经阿里巴巴购货遇黑心土豆?损失难获赔</a><br>
+<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078978.md#1">瘟疫冲击出口 中国经济“无复苏迹象”</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079852.md#1">【全球疫情直击】情报机构曝中共瞒疫毁证据</a><br>
 <br><p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
@@ -42,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,474,840 人
+!共 355,477,553 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
